--- a/sass/style.sass
+++ b/sass/style.sass
@@ -88,6 +88,9 @@ body
     color: white
     cursor: pointer
 
+  .active
+    color: white
+
 .statistic-box
   border-radius: 10px
   display: grid
